--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,21 +1,27 @@
-<mat-toolbar color="primary">
-  <h3>{{title}}</h3>
-</mat-toolbar>
-<main>
-  <mat-card>
-    <mat-card-header>
-      <mat-card-title>{{tagline}}</mat-card-title>
-      <mat-card-subtitle>Features</mat-card-subtitle>
-    </mat-card-header>
-    <mat-card-content>
-      <ul>
-        <li *ngFor="let feature of features">
-          {{feature}}
-        </li>
-      </ul>
-    </mat-card-content>
-  </mat-card>
-  <mat-card style="text-align: center">
-    <a mat-raised-button color="accent" href="https://github.com/Microflash/angular-material-starter">Source at Github</a>
-  </mat-card>
+<main [ngClass]="{'dark-theme': isDark | async}">
+  <section class="mat-app-background">
+    <mat-toolbar color="primary">
+      <h3>{{title}}</h3>
+      <span class="filler"></span>
+      <mat-slide-toggle [checked]="isDark | async" (change)="toggleDarkTheme($event.checked)">Toggle theme</mat-slide-toggle>
+    </mat-toolbar>
+    <div>
+      <mat-card>
+        <mat-card-header>
+          <mat-card-title>{{tagline}}</mat-card-title>
+          <mat-card-subtitle>Features</mat-card-subtitle>
+        </mat-card-header>
+        <mat-card-content>
+          <ul>
+            <li *ngFor="let feature of features">
+              {{feature}}
+            </li>
+          </ul>
+        </mat-card-content>
+      </mat-card>
+      <mat-card style="text-align: center">
+        <a mat-raised-button color="accent" href="https://github.com/Microflash/angular-material-starter">Source at Github</a>
+      </mat-card>
+    </div>
+  </section>
 </main>
