--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,7 +1,3 @@
-main {
-  padding: 1em;
-}
-
 ul {
   list-style-type: '·  ';
 }
@@ -13,4 +9,8 @@ li {
 .mat-card-title {
   font-size: 1.5em;
   font-weight: 400;
+}
+
+.filler {
+  flex: 1 1 auto;
 }
