--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
     <mat-toolbar color="primary">
       <h3>{{title}}</h3>
       <span class="filler"></span>
-      <mat-slide-toggle [checked]="isDark | async" (change)="toggleDarkTheme($event.checked)">Toggle theme</mat-slide-toggle>
+      <mat-slide-toggle [checked]="isDark | async" (change)="toggleDarkTheme($event.checked)"><small>Switch theme</small></mat-slide-toggle>
     </mat-toolbar>
     <div>
       <mat-card>
