--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,22 +1,12 @@
 <main>
   <section class="mat-app-background">
-    <mat-toolbar color="primary">
-      <button mat-button>
-        <span class="mat-button-wrapper">
-          <img src="../assets/img/angular-white-transparent.svg" alt="angular" />
-          <span>{{title}}</span>
-        </span>
-      </button>
+    <mat-toolbar color="accent">
+      <svg width="32" height="32" viewBox="0 0 32 32" version="1.1" xmlns="http://www.w3.org/2000/svg"><g><g><path d="M28.46,16.283c1.306,-1.305 2.04,-3.078 2.04,-4.924c0,-3.82 -3.144,-6.964 -6.964,-6.964c-1.846,0 -3.619,0.734 -4.924,2.04l-7.83,7.83l0,9.86l9.86,0l7.818,-7.842Z" style="fill:#952e31;fill-rule:nonzero;stroke:#fff;stroke-width:2.32px;"/><path d="M23.542,11.365l-16.24,16.24" style="fill:none;fill-rule:nonzero;stroke:#fff;stroke-width:2.32px;"/><path d="M25.282,19.485l-9.86,0" style="fill:none;fill-rule:nonzero;stroke:#fff;stroke-width:2.32px;"/></g><g><path d="M3.54,16.283c-1.306,-1.305 -2.04,-3.078 -2.04,-4.924c0,-3.82 3.144,-6.964 6.964,-6.964c1.846,0 3.619,0.734 4.924,2.04l7.83,7.83l0,9.86l-9.86,0l-7.818,-7.842Z" style="fill:#b52e31;fill-rule:nonzero;stroke:#fff;stroke-width:2.32px;"/><path d="M8.458,11.365l16.24,16.24" style="fill:none;fill-rule:nonzero;stroke:#fff;stroke-width:2.32px;"/><path d="M6.718,19.485l9.86,0" style="fill:none;fill-rule:nonzero;stroke:#fff;stroke-width:2.32px;"/></g></g></svg>
       <span class="filler"></span>
       <theme-picker></theme-picker>
     </mat-toolbar>
     <div class="promo">
-      <h1 class="mat-h1">{{"Angular " + title}}</h1>
-      <h2 class="mat-h2">{{tagline}}</h2>
-      <a mat-raised-button color="accent" href="https://github.com/Microflash/angular-material-starter">
-        <img src="../assets/img/github-circle-white-transparent.svg" />
-        <strong style="padding-left: 5px">Github</strong>
-      </a>
+      <h1 class="mat-h1">{{"Angular " + title}} <span class="tagline">{{tagline}}</span></h1>
     </div>
     <div class="features">
       <mat-card *ngFor="let feature of features">
@@ -25,12 +15,9 @@
       </mat-card>
     </div>
     <footer class="mat-app-background">
-      <a mat-button href="https://github.com/Microflash/angular-material-starter/blob/master/LICENSE.md">
-        MIT Licensed
-      </a>
-      <a mat-button href="https://www.twitter.com/Microflash">
-        &copy; 2018 - present, Naiyer Asif
-      </a>
+      <a mat-flat-button target="_blank" href="https://github.com/Microflash/angular-material-starter">GitHub</a>
+      <a mat-flat-button target="_blank" href="https://github.com/Microflash/angular-material-starter/blob/master/LICENSE.md">MIT license</a>
+      <a mat-flat-button target="_blank" href="https://www.twitter.com/Microflash">&copy; 2018 - present, Naiyer Asif</a>
     </footer>
   </section>
 </main>
